0x0A-python-inheritance/1
  File "/home/muchai/alx-higher_level_programming/0x0A-python-inheritance/9-rectangle.py", line 24
    self.integer_validator('width', width)
                                          ^
IndentationError: unindent does not match any outer indentation level
